--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-# front matter tells Jekyll to process Liquid
+title: Home
 ---
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{page.title}}</title>
 </head>
 <body>
     <h1>{{ "Hello World!" | downcase }}</h1>
