--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ title: Home
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{page.title}}</title>
+    {% if jekyll.environment == "production" %}
+  <script src="my-analytics-script.js"></script>
+{% endif %}
 </head>
 <body>
     <h1>{{ "Hello World!" | downcase }}</h1>
