--- a/index.html
+++ b/index.html
@@ -2,17 +2,47 @@
 layout: default
 title: Home
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{page.title}}</title>
-    {% if jekyll.environment == "production" %}
-  <script src="my-analytics-script.js"></script>
-{% endif %}
-</head>
-<body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
-</body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+    {% feed_meta %}
+    {% seo %}
+  </head>
+  <body class="is-preload">
+    <div id="wrapper" class="fade-in">
+      				<!-- Header -->
+					<header id="header">
+						<a class="logo">Blogs</a>
+					</header>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li class="active"><a href="index.html">Home</a></li>						
+							<li class="active"><a href="#footer">Contact</a></li>						
+						</ul>
+						<ul class="icons">							
+							<li><a href="https://www.linkedin.com/in/jordan-nash-87b042173/" title="Linked In" class="icon brands fa-linkedin"><span class="label">linked In</span></a></li>
+							<li><a href="https://github.com/LayersOfAbstraction/" title="Github" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+          </nav>
+          				<!-- Main -->
+					<div id="main">
+
+						<!-- Posts -->
+						<div id="projects">
+							<section class="posts">
+								<article>
+                  {% include navigation.html %}
+                  {{ content }}
+								</article>
+							</section>								
+						</div>		
+
+    </div>
+  </body>
 </html>
